<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Shopping="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".old.MainActivity">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="1"
        android:title="@string/share_shoppinglist_title"
        android:visible="false"
        Shopping:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_wares"
        android:orderInCategory="100"
        android:title="@string/delete_wares_title"
        Shopping:showAsAction="never" />

    <item
        android:id="@+id/action_delete_marked"
        android:orderInCategory="110"
        android:title="@string/delete_marked_title"
        Shopping:showAsAction="never" />

    <item
        android:id="@+id/action_login_signup"
        android:orderInCategory="120"
        android:title="@string/menu_login_signup_title"
        Shopping:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="120"
        android:title="@string/menu_logout_title"
        android:visible="false"
        Shopping:showAsAction="never" />
</menu>
