<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.printz.guano.shoppingassistant.login.LoginActivity">

    <View
        android:id="@+id/focus_thief"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imageViewIconLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/grocerygo_icon_description"
            android:src="@drawable/ic_icon" />

        <TextView
            android:id="@+id/textViewTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewIconLogin"
            android:paddingTop="10dp"
            android:text="@string/login_screen_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/loginscreentitle" />


        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitleLogin"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_username_text"
                android:textColor="@color/md_grey_500"
                android:textSize="@dimen/loginscreenlabels" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/username"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/login_password_text"
                android:textColor="@color/md_grey_500"
                android:textSize="@dimen/loginscreenlabels" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:labelFor="@id/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/SignUpButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/md_white_1000"
            android:padding="5dp"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLogIn"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonSignUp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="@string/action_log_in"
            android:textColor="@color/colorToolbarPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
